--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                             <p> <!--<pre></pre>-->
                                 <strong>Name : </strong>           Shantonu Acharjee<br>
-                                <strong>Father’s Name : </strong>  Montu Chandra Acharjee><br>
+                                <strong>Father’s Name : </strong>  Montu Chandra Acharjee <br>
                                 <strong>Mother’s Name  : </strong> Shamali Acharjee<br>
                                 <strong>Date of Birth  : </strong> 01/01/2003 <br>
                                 <strong>Marital Status : </strong> Unmarried<br>
@@ -134,14 +134,14 @@
                         <div class="basic-desc-img">
                 
 
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
+                            <img src="./Photos/My Photo/10ms .jpg" alt="Shantonu Photo 1">
+                            <img src="./Photos/My Photo/20200228150020_IMG_0500-01.jpg" alt="Shantonu Photo 2">
+                            <img src="./Photos/My Photo/Blind eye.JPG" alt="Shantonu Photo 3">
 
 
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
-                            <img src="./Photos/Photo/shantonu-removebg-preview.png" alt="">
+                            <img src="./Photos/My Photo/IMG_0234.jpg" alt="Shantonu Photo 4">
+                            <img src="./Photos/My Photo/robot aram.jpg" alt="Shantonu Photo 5">
+                            <img src="./Photos/My Photo/smd IMG_0439.jpg" alt="Shantonu Photo 6">
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,23 @@
 
 
                 <div class="row">
-                    <div class="col-lg-7"></div>
+                    <div class="col-lg-7">
+                        <div class="basic-desc-img">
+                
+
+                            <img src="./Photos/My All Price Photo/40th National Science and Technology Week-2019 upo.jpg" alt="Shantonu Photo 1">
+                            <img src="./Photos/My All Price Photo/40th National Science and Technology Week-2019.jpg" alt="Shantonu Photo 2">
+                            <img src="./Photos/My All Price Photo/IMG_0623.JPG" alt="Shantonu Photo 3">
+
+
+                            <img src="./Photos/My All Price Photo/IMG_0628.JPG" alt="Shantonu Photo 4">
+                            <img src="./Photos/My All Price Photo/IMG_0633.JPG" alt="Shantonu Photo 5">
+                            <img src="./Photos/My All Price Photo/IMG_0635.JPG" alt="Shantonu Photo 6">
+                        </div>
+                    </div>
+
+
+
                     <div class="col-lg-5">
 
                         <div class="achieve-desc">
