--- a/index.html
+++ b/index.html
@@ -384,15 +384,62 @@
 
 
                 <div class="row">
-                    <div class="col-lg-7 d-flex">
-                        <div class="card basic-desc-img">
-                            <img src="./Photos/Project Photo/Project22 3rd eye of a blind person Child.jpg" alt="">
+                    <div class="col-lg-7 achieve-desc-slider">
+                        <!-- Price Slider Start-->
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                            </ol>
+
+
+
+                            <div class="carousel-inner">
+
+                            <div class="carousel-item active">
+                                <img src="./Photos/Price Photo/1619791415787_compress49.jpg" class="d-block w-100" alt="Slider1">
+                            </div>
+
+                            <div class="carousel-item">
+                                <img src="./Photos/Price Photo/1619791415883_compress7.jpg" class="d-block w-100" alt="Slider2">
+                            </div>
+
+                            <div class="carousel-item">
+                                <img src="./Photos/Price Photo/1619791415951_compress82.jpg" class="d-block w-100" alt="Slider3">
+                            </div>
+
+
+                            <div class="carousel-item">
+                                <img src="./Photos/Price Photo/1619791416002_compress20.jpg" class="d-block w-100" alt="Slider3">
+                            </div>
+
+                            <div class="carousel-item">
+                                <img src="./Photos/Price Photo/1619791416047_compress41.jpg" class="d-block w-100" alt="Slider3">
+                            </div>
+
+                            </div>
+
+
+
+
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                            </a>
                         </div>
+                        <!--Price Slider End-->
                     </div>
 
 
 
-                    <div class="col-lg-5 d-flex">
+                    <div class="col-lg-5 ">
 
                         <div class="achieve-desc">
 
